fix: resolves nav dropdown gap & img refs

--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,11 @@ header nav ul a {
   position: relative;
 }
 
+header nav ul a[aria-expanded="true" i] ~ ul {
+  margin-top: 0;
+  margin-left: -5px;
+}
+
 header nav ul a:hover {
   color: var(--color-warm-tan);
 }
